# pipewire_python

./: .coveragerc  .flake8  .gitignore  .pylintrc  CHANGELOG.md  LICENSE  LICENSE.md  Makefile  README.md  pyproject.toml  requirements_dev.txt  setup.py  simple_test.py  tox.ini  tutorial.py
.github/workflows/: build.yml  codecov.yml  publish.yml  publish_docs.yml  publish_pypi.yml  python-publish.yml
docs/: CICD.md  INSTALL_PIPEWIRE.md  KNOWN_ISSUES.md  NEW_RELEASE.md  ROADMAP.md  UNINSTALL_PIPEWIRE.md  index.html
docs/html/: index.html  pipewire_python.html  search.json
docs/html/pipewire_python/: _constants.html  _utils.html  controller.html
pipewire_python/: __init__.py  _constants.py  _utils.py  controller.py  link.py  pipewireAPICommands.json  pipewirecontroller.py  utils.py
pipewire_python/__pyinstaller/: __init__.py
tests/: test_dumy.py  test_interfaces.py  test_links.py  test_playback.py  test_record.py  test_simple.py  test_targets.py
